/*****************************************************************************/
/*                                                                           */
/*                                                                           */
/*                        LES CODEUSES DU DIMANCHE                           */
/*                                FONT UN                                    */
/*                                                                           */
/*                   _ _ _ ____ ___  ____ ____ ____ _  _                     */
/*                   | | | |___ |__] [__  |___ |__/ |  |                     */
/*                   |_|_| |___ |__] ___] |___ |  \  \/                      */
/*                                                                           */
/*****************************************************************************/

#ifndef SERVERCONFIG_HPP
#define SERVERCONFIG_HPP

#include "LocationConfig.hpp"

class ServerConfig {
public:
	std::string					port; 		// str pour getadrinfo() pour eviter hton 
	std::string					host;         // par ex par defaut "0.0.0.0"
	std::string					serverName;
	std::string					root;
	std::vector<std::string>	index;

	size_t						maxBodySize;
	
	std::map<int, std::string>  errorPages;  // Code (404) -> Chemin du fichier
	std::vector<LocationConfig> locations;

	ServerConfig();
	ServerConfig(const ServerConfig& other);
	ServerConfig& operator=(const ServerConfig& other);
	~ServerConfig();
};

#endif

