@startuml

!theme blueprint

' Orientation horizontale
left to right direction

class WebServer {
    - std::vector<SocketServer> _socketServers
    - std::map<int, SocketClient> _socketClients
    - // vecteurs de Polls
}

class SocketServer {
    - std::vector<ServerConfig*> _servers
}

class SocketClient {
    + HttpRequest& getRequest()
}

class ServerConfig
class HttpRequest

' Relations
WebServer --- SocketServer : contient
WebServer --- SocketClient : gère

SocketServer "1" *-- "*" ServerConfig : contient
SocketClient --> HttpRequest : utilise

@enduml


' @startuml
' !theme blueprint

' title Classes

' ' Socket client
' class SocketClient {
'     -_fd : int
'     -_buffer : string - read
'     -clientPort : int - ntohs

'     +SocketClient();
'     +SocketClient(int fd);
' 	+SocketClient(const SocketClient& other);
' 	+SocketClient& operator=(const SocketClient& other);
'     +~SocketClient();
'     +int receiveData();
'     +int sendData(const std::string& data);
'     +void closeSocket();
'     +int getFd() const;
'     +const std::string& getBuffer() const;
'     +int getPort() const;
'     +void setPort(int port);
' }

' ' Socket serveur
' class SocketServer {
'     -address : string - recup de htons ?
'     -_fd : int
'     -_port : string
'     -_servers : vector<ServerConfig*>
'     +SocketServer();
' 	+SocketServer(const SocketServer& other);
' 	+SocketServer& operator=(const SocketServer& other);
'     +~SocketServer();
'     +bool    createSocket();
'     +bool    bindSocket();
'     +bool    listenSocket(int backlog = 10);
'     +int     acceptClient();
'     +void    closeSocket();
'     +int     getFd() const;
'     +const std::string& getPort() const;
'     +void setPort(const std::string& port);
'     +void addServer(ServerConfig* server);
'     +const std::vector<ServerConfig*>& getServers() const;
' }

' ' Socket ServerConfig
' class ServerConfig {
' 	+port : string	
' 	+host : string	
' 	+serverName : string
' 	+maxBodySize : size_t
' 	+errorPages : map<int, std::string>
' 	+std::vector : <LocationConfig>

' 	+ServerConfig() 
' }

' SocketServer <|.. ServerConfig
' ConfigFile <|-- ServerConfig
' ServerConfig <|-- LocationConfig

' ' Socket LocationConfig
' class LocationConfig {

' }

' ' Socket LocationConfig
' class ConfigFile {

' }




' ' ' Interface
' ' interface IAutre {
' '     + pub()
' ' }

' ' ' Abstraite
' ' abstract class AAutre {
' '     - priv : int
' '     + pub()
' ' }

' ' ' Classe 1
' ' class autre1 {
' '     - priv : int
' '     + pub()
' ' }

' ' ' classe 2
' ' class autre2 {
' '     - priv : int
' '     + pub()
' ' }

' ' ' Relations
' ' IAutre <|.. AAutre
' ' AAutre <|-- autre1
' ' AAutre <|-- autre2


' struct addrinfo {
'     +int ai_flags;
'     +int ai_family;
'     +int ai_socktype;
'     +int ai_protocol;
'     +socklen_t ai_addrlen;
'     +struct sockaddr *ai_addr;
'     +char *ai_canonname;
'     +struct addrinfo *ai_next;

'     - hints.ai_family = AF_INET;      // IPv4
'     - hints.ai_socktype = SOCK_STREAM; // TCP
'     - hints.ai_flags = AI_PASSIVE;    // pour bind
' }

@enduml